Fixes #65 - Remove empty space that would appear above/below a feature image on mobile devices

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -126,7 +126,7 @@ body {
 		bottom: 0; 
 		margin: auto; 
 		min-width: 50%;
-		min-height: 50%;
+		min-height: 400px; // match .entry-image min-height
 	}
 }
 // Feature Image Caption
